2011-07-17  Paul Eggert  <eggert@cs.ucla.edu>

	* xterm.c: don't go over XClientMessageEvent limit
	(scroll_bar_windows_size): Now ptrdiff_t, as we prefer signed.
	(x_send_scroll_bar_event): Likewise.  Check that the size does not
	exceed limits imposed by XClientMessageEvent, as well as the usual
	ptrdiff_t and size_t limits.

	* keyboard.c: Overflow, signedness and related fixes.
	(make_lispy_movement): Use same integer type in forward decl
	that is used in the definition.
	(read_key_sequence, keyremap_step):
	Change bufsize argument back to int, undoing my 2011-03-30 change.
	We prefer signed types, and int is wide enough here.
	(parse_tool_bar_item): Don't assume tool_bar_max_label_size is less
	than TYPE_MAXIMUM (EMACS_INT) / 2.  Don't let the label size grow
	larger than STRING_BYTES_BOUND.  Use ptrdiff_t for Emacs string
	length, not size_t.  Use ptrdiff_t for index, not int.
	(keyremap_step, read_key_sequence): Redo bufsize check to avoid
	possibility of integer overflow.

	Overflow, signedness and related fixes for images.

	* dispextern.h (struct it.stack[0].u.image.image_id)
	(struct_it.image_id, struct image.id, struct image_cache.size)
	(struct image_cache.used, struct image_cache.ref_count):
	* gtkutil.c (update_frame_tool_bar):
	* image.c (x_reference_bitmap, Fimage_size, Fimage_mask_p)
	(Fimage_metadata, free_image_cache, clear_image_cache, lookup_image)
	(cache_image, mark_image_cache, x_kill_gs_process, Flookup_image):
	* nsmenu.m (update_frame_tool_bar):
	* xdisp.c (calc_pixel_width_or_height):
	* xfns.c (image_cache_refcount):
	Image IDs are now ptrdiff_t, not int, to avoid arbitrary limits
	on typical 64-bit hosts.

	* image.c (RANGED_INTEGERP, TYPE_RANGED_INTEGERP): New macros.
	(x_bitmap_pixmap, x_create_x_image_and_pixmap):
	Omit unnecessary casts to int.
	(parse_image_spec): Check that integers fall into 'int' range
	when the callers expect that.
	(image_ascent): Redo ascent calculation to avoid int overflow.